tests/ui/repr/repr-disallow-on-variant.stderr
error: `#[repr(u8)]` attribute cannot be used on enum variants
  --> $DIR/repr-disallow-on-variant.rs:4:5
   |
LL |     #[repr(u8)]
   |     ^^^^^^^^^^^
   |
   = help: `#[repr(u8)]` can only be applied to enums

error: aborting due to 1 previous error

